crates/parser/src/tests/snapshots/kcl_parser__tests__expr__line_continue.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"1 + \\\n2\n\"####)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: NumberLit(
                    NumberLit {
                        binary_suffix: None,
                        value: Int(
                            1,
                        ),
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            op: Add,
            right: Node {
                node: NumberLit(
                    NumberLit {
                        binary_suffix: None,
                        value: Int(
                            2,
                        ),
                    },
                ),
                filename: "",
                line: 2,
                column: 0,
                end_line: 2,
                end_column: 1,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 2,
    end_column: 1,
}
