crates/parser/src/tests/snapshots/kcl_parser__tests__expr__list_comp_expr_1.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests ::\nparsing_expr_string(r####\"[i for i in [1, 2, 3] if i > 2]\"####)"
---
Node {
    node: ListComp(
        ListComp {
            elt: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "i",
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 2,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 2,
            },
            generators: [
                Node {
                    node: CompClause {
                        targets: [
                            Node {
                                node: Identifier {
                                    names: [
                                        Node {
                                            node: "i",
                                            filename: "",
                                            line: 1,
                                            column: 7,
                                            end_line: 1,
                                            end_column: 8,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                                filename: "",
                                line: 1,
                                column: 7,
                                end_line: 1,
                                end_column: 8,
                            },
                        ],
                        iter: Node {
                            node: List(
                                ListExpr {
                                    elts: [
                                        Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 13,
                                            end_line: 1,
                                            end_column: 14,
                                        },
                                        Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        2,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 16,
                                            end_line: 1,
                                            end_column: 17,
                                        },
                                        Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        3,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 19,
                                            end_line: 1,
                                            end_column: 20,
                                        },
                                    ],
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 12,
                            end_line: 1,
                            end_column: 21,
                        },
                        ifs: [
                            Node {
                                node: Compare(
                                    Compare {
                                        left: Node {
                                            node: Identifier(
                                                Identifier {
                                                    names: [
                                                        Node {
                                                            node: "i",
                                                            filename: "",
                                                            line: 1,
                                                            column: 25,
                                                            end_line: 1,
                                                            end_column: 26,
                                                        },
                                                    ],
                                                    pkgpath: "",
                                                    ctx: Load,
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 25,
                                            end_line: 1,
                                            end_column: 26,
                                        },
                                        ops: [
                                            Gt,
                                        ],
                                        comparators: [
                                            Node {
                                                node: NumberLit(
                                                    NumberLit {
                                                        binary_suffix: None,
                                                        value: Int(
                                                            2,
                                                        ),
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 29,
                                                end_line: 1,
                                                end_column: 30,
                                            },
                                        ],
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 25,
                                end_line: 1,
                                end_column: 30,
                            },
                        ],
                    },
                    filename: "",
                    line: 1,
                    column: 3,
                    end_line: 1,
                    end_column: 30,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 31,
}
