crates/parser/src/tests/snapshots/kcl_parser__tests__expr__list_expr_1.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"[1, if True: 2, 3]\"####)"
---
Node {
    node: List(
        ListExpr {
            elts: [
                Node {
                    node: NumberLit(
                        NumberLit {
                            binary_suffix: None,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 2,
                },
                Node {
                    node: ListIfItem(
                        ListIfItemExpr {
                            if_cond: Node {
                                node: NameConstantLit(
                                    NameConstantLit {
                                        value: True,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 7,
                                end_line: 1,
                                end_column: 11,
                            },
                            exprs: [
                                Node {
                                    node: NumberLit(
                                        NumberLit {
                                            binary_suffix: None,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                    filename: "",
                                    line: 1,
                                    column: 13,
                                    end_line: 1,
                                    end_column: 14,
                                },
                            ],
                            orelse: None,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 4,
                    end_line: 1,
                    end_column: 14,
                },
                Node {
                    node: NumberLit(
                        NumberLit {
                            binary_suffix: None,
                            value: Int(
                                3,
                            ),
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 16,
                    end_line: 1,
                    end_column: 17,
                },
            ],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 18,
}
