crates/parser/src/tests/snapshots/kcl_parser__tests__expr__list_with_config_items_0.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests ::\nparsing_expr_string(r####\"[{\n        name: \"test\"\n    }\n    {\n        name: \"test2\"\n    }]\"####)"
---
Node {
    node: List(
        ListExpr {
            elts: [
                Node {
                    node: Config(
                        ConfigExpr {
                            items: [
                                Node {
                                    node: ConfigEntry {
                                        key: Some(
                                            Node {
                                                node: Identifier(
                                                    Identifier {
                                                        names: [
                                                            Node {
                                                                node: "name",
                                                                filename: "",
                                                                line: 2,
                                                                column: 8,
                                                                end_line: 2,
                                                                end_column: 12,
                                                            },
                                                        ],
                                                        pkgpath: "",
                                                        ctx: Load,
                                                    },
                                                ),
                                                filename: "",
                                                line: 2,
                                                column: 8,
                                                end_line: 2,
                                                end_column: 12,
                                            },
                                        ),
                                        value: Node {
                                            node: StringLit(
                                                StringLit {
                                                    is_long_string: false,
                                                    raw_value: "\"test\"",
                                                    value: "test",
                                                },
                                            ),
                                            filename: "",
                                            line: 2,
                                            column: 14,
                                            end_line: 2,
                                            end_column: 20,
                                        },
                                        operation: Union,
                                        is_shorthand: false,
                                    },
                                    filename: "",
                                    line: 2,
                                    column: 8,
                                    end_line: 2,
                                    end_column: 20,
                                },
                            ],
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 3,
                    end_column: 5,
                },
                Node {
                    node: Config(
                        ConfigExpr {
                            items: [
                                Node {
                                    node: ConfigEntry {
                                        key: Some(
                                            Node {
                                                node: Identifier(
                                                    Identifier {
                                                        names: [
                                                            Node {
                                                                node: "name",
                                                                filename: "",
                                                                line: 5,
                                                                column: 8,
                                                                end_line: 5,
                                                                end_column: 12,
                                                            },
                                                        ],
                                                        pkgpath: "",
                                                        ctx: Load,
                                                    },
                                                ),
                                                filename: "",
                                                line: 5,
                                                column: 8,
                                                end_line: 5,
                                                end_column: 12,
                                            },
                                        ),
                                        value: Node {
                                            node: StringLit(
                                                StringLit {
                                                    is_long_string: false,
                                                    raw_value: "\"test2\"",
                                                    value: "test2",
                                                },
                                            ),
                                            filename: "",
                                            line: 5,
                                            column: 14,
                                            end_line: 5,
                                            end_column: 21,
                                        },
                                        operation: Union,
                                        is_shorthand: false,
                                    },
                                    filename: "",
                                    line: 5,
                                    column: 8,
                                    end_line: 5,
                                    end_column: 21,
                                },
                            ],
                        },
                    ),
                    filename: "",
                    line: 4,
                    column: 4,
                    end_line: 6,
                    end_column: 5,
                },
            ],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 6,
    end_column: 6,
}
